--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.2.1",
+    "axios": "^0.17.1",
     "expo": "^23.0.4",
     "native-base": "^2.3.5",
     "react": "16.0.0",
