--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "native-base": "^2.3.5",
     "react": "16.0.0",
     "react-native": "0.50.3",
-    "react-navigation": "^1.0.0-beta.21"
+    "react-navigation": "^1.0.0-beta.21",
+    "redux": "^3.7.2"
   }
 }
