--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.50.3",
     "react-navigation": "^1.0.0-beta.21",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.0.0"
   }
 }
